Add query by country in /v2/country
